// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config:formats js-es5 1`] = `
Object {
  "baseUrl": "/",
  "build": Object {
    "isStatic": false,
  },
  "content": Object {
    "dir": "content",
    "frontMatterFormat": "yaml",
    "systems": Array [
      "api",
      "cdn",
      "dns",
      "site-delivery",
    ],
  },
  "defaultLocale": "en",
  "description": "The ES5 Config Format Example",
  "locales": Array [
    Object {
      "code": "en",
      "iso": "en-US",
      "name": "English",
    },
  ],
  "manifest": false,
  "name": "es5_config_format",
  "notifications": Object {
    "feeds": true,
    "icalendar": true,
    "support": false,
    "twitter": false,
  },
  "serviceWorker": true,
  "short_title": "ES5 Config Format",
  "sourceDir": "fragments/formats/js-es5",
  "theme": Object {},
  "title": "ES5 Config Format",
}
`;

exports[`config:formats js-es6 1`] = `
Object {
  "baseUrl": "/",
  "build": Object {
    "isStatic": false,
  },
  "content": Object {
    "dir": "content",
    "frontMatterFormat": "yaml",
    "systems": Array [
      "api",
      "cdn",
      "dns",
      "site-delivery",
    ],
  },
  "default": Object {
    "defaultLocale": "en",
    "description": "The ES6 Config Format Example",
    "locales": Array [
      Object {
        "code": "en",
        "iso": "en-US",
        "name": "English",
      },
    ],
    "manifest": false,
    "name": "es6_config_format",
    "serviceWorker": true,
    "title": "ES6 Config Format",
  },
  "defaultLocale": "en",
  "description": "A marvelous open source Status Page system",
  "locales": Array [
    Object {
      "code": "en",
      "iso": "en-US",
      "name": "English",
    },
  ],
  "manifest": true,
  "name": "statusfy_demo",
  "notifications": Object {
    "feeds": true,
    "icalendar": true,
    "support": false,
    "twitter": false,
  },
  "serviceWorker": true,
  "short_title": "Statusfy Demo",
  "sourceDir": "fragments/formats/js-es6",
  "theme": Object {},
  "title": "Statusfy Demo",
}
`;

exports[`config:formats toml 1`] = `
Object {
  "baseUrl": "/",
  "build": Object {
    "isStatic": false,
  },
  "content": Object {
    "dir": "content",
    "frontMatterFormat": "yaml",
    "systems": Array [
      "api",
      "cdn",
      "dns",
      "site-delivery",
    ],
  },
  "defaultLocale": "en",
  "description": "The TOML Config Format Example",
  "locales": Array [
    Object {
      "code": "en",
      "file": "en.json",
      "iso": "en-US",
      "name": "English",
    },
  ],
  "manifest": false,
  "name": "toml-config-format",
  "notifications": Object {
    "feeds": true,
    "icalendar": true,
    "support": false,
    "twitter": false,
  },
  "serviceWorker": true,
  "short_title": "TOML Config Format",
  "sourceDir": "fragments/formats/toml",
  "theme": Object {},
  "title": "TOML Config Format",
}
`;

exports[`config:formats yaml 1`] = `
Object {
  "baseUrl": "/",
  "build": Object {
    "isStatic": false,
  },
  "content": Object {
    "dir": "content",
    "frontMatterFormat": "yaml",
    "systems": Array [
      "api",
      "cdn",
      "dns",
      "site-delivery",
    ],
  },
  "defaultLocale": "en",
  "description": "YAML Config Format",
  "locales": Array [
    Object {
      "code": "en",
      "iso": "en-US",
      "name": "English",
    },
  ],
  "manifest": false,
  "name": "yaml-config-format",
  "notifications": Object {
    "feeds": true,
    "icalendar": true,
    "support": false,
    "twitter": false,
  },
  "serviceWorker": true,
  "short_title": "YAML Config Format",
  "sourceDir": "fragments/formats/yaml",
  "theme": Object {},
  "title": "YAML Config Format",
}
`;
